<resources>
    <string name="app_name">DanhBa</string>
    <string name="nhapten">Nhập tên</string>
    <string name="nhapsodienthoai">Nhập số điện thoại</string>
    <string name="gioitinh">Giới tính</string>
    <string name="nam">Nam</string>
    <string name="nu">Nữ</string>
    <string name="them">Thêm</string>
    <string name="sendmessage">Send Message</string>
    <string name="call">Call</string>
    <string name="detailDialog">Do you want to Call or Message?</string>
</resources>
